--- a/app/src/main/res/values-ar/string_arrays.xml
+++ b/app/src/main/res/values-ar/string_arrays.xml
@@ -290,4 +290,36 @@
         <item>٤٩</item>
         <item>٥٠</item>
     </string-array>
+    <string-array name="athkar">
+        <item>"أذكار الصباح والمساء"</item>
+        <item>"أذكار الاستيقاظ من النوم"</item>
+        <item>"أذكار النوم"</item>
+        <item>"الأذكار بعد السلام من الصلاة"</item>
+        <item>"الذكر عند الخروج من المنزل"</item>
+        <item>"الذكر عند دخول المنزل"</item>
+        <item>"دعاء الذهاب إلى المسجد"</item>
+        <item>"دعاء دخول المسجد"</item>
+        <item>"دعاء الخروج من المسجد"</item>
+        <item>"دعاء صلاة الاستخارة"</item>
+        <item>"دعاء قنوت الوتر"</item>
+        <item>"الدعاء عند إفطار الصائم"</item>
+        <item>"الدعاء قبل الطعام"</item>
+        <item>"الدعاء عند الفراغ من الطعام"</item>
+        <item>"دعاء لبس الثوب"</item>
+        <item>"دعاء لبس الثوب الجديد"</item>
+        <item>"دعاء الهم والحزن"</item>
+        <item>"دعاء الكرب"</item>
+        <item>"دعاء من استصعب عليه أمر"</item>
+        <item>"دعاء زيارة القبور"</item>
+        <item>"دعاء الريح"</item>
+        <item>"دعاء الرعد"</item>
+        <item>"من أدعية الاستسقاء"</item>
+        <item>"الدعاء إذا نزل المطر"</item>
+        <item>"الذكر بعد نزول المطر"</item>
+        <item>"من أدعية الاستصحاء"</item>
+        <item>"دعاء رؤية الهلال"</item>
+        <item>"كفارة المجلس ومايختم به المجالس"</item>
+        <item>"دعاء ركوب الدابة"</item>
+        <item>"دعاء السفر"</item>
+    </string-array>
 </resources>
