--- a/app/src/main/res/layout/activity_athkar_details.xml
+++ b/app/src/main/res/layout/activity_athkar_details.xml
@@ -87,9 +87,9 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/athkar_details_activity_recycler_view"
+                style="@style/cardViewBackground"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/line_barrier"
