--- a/app/src/main/res/layout/athkar_details_layout.xml
+++ b/app/src/main/res/layout/athkar_details_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:fontFamily="@font/dthuluth"
-        style="@style/white_black_text"
+        style="@style/yellow_black_text"
         android:textStyle="bold"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
